test/org/midica/testfiles/failing/eff-func-lsb-too-high.midica
INCLUDE inc/instruments.midica


0: vol.double.set(30/128)
